--- a/example_template.yaml
+++ b/example_template.yaml
@@ -1,19 +1,24 @@
-AWSTemplateFormatVersion: 2010-09-09
-Description: A lambda function in the development/test/production environment
+AWSTemplateFormatVersion: "2010-09-09"
+Description: "A lambda function in the development/test/production environment"
 
 Parameters:
   AdminRoleNameParameter:
-    Description: The name of the IAM role used by administrators
-    Type: String
-    AllowedValues: ["AdminRole", "TestAdminRole"]
+    Description: "The name of the IAM role used by administrators"
+    Type: "String"
+    AllowedValues: 
+      - "AdminRole"
+      - "TestAdminRole"
   EnvironmentParameter:
     Description: "The environment that this stack is running in"
     Type: "String"
-    AllowedValues: ["development", "test", "production"]
+    AllowedValues: 
+      - "development"
+      - "test"
+      - "production"
     
 Resources:
   ExampleIAMRole:
-    Type: AWS::IAM::Role
+    Type: "AWS::IAM::Role"
     Properties:
       Description: |
         Used by ExamplelambdaFunction. The IAM role needs to account for the following
@@ -22,7 +27,7 @@ Resources:
         The lambda function will encrypt using the KMS key.
         The IAM role's path needs to be passed into the template as a Cloudformation parameter.
       AssumeRolePolicyDocument: 
-        Version: 2012-10-17
+        Version: "2012-10-17"
         Statement:
           - 
             Effect: "Allow"
@@ -30,20 +35,20 @@ Resources:
               Service:
                 - "lambda.amazonaws.com"
             Action:
-              - 'sts:AssumeRole'
-  RolePolicies:
+              - "sts:AssumeRole"
+  ExampleRolePolicy:
     Type: "AWS::IAM::Policy"
     Properties:
         PolicyName: "ExampleIAMRolePolicy"
         PolicyDocument:
-          Version: 2012-10-17
+          Version: "2012-10-17"
           Statement:
             - 
               Effect: "Allow"
         Resource: !Sub >-
             "arn:aws:iam::${AWS::AccountId}:role/${ExampleIAMRole.Name}"
-        Action: 'secretsmanager:CreateSecret'
-        Resource: '*'
+        Action: "secretsmanager:CreateSecret"
+        Resource: "*"
         Tags:
           -
             Key: "Environment"
@@ -56,7 +61,7 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties:
       Description: |
-        The `FunctionName` of the lambda function needs to be set to the correct value of "development-example-lambda" or "test-example-lambda" or "production-example-lambda"
+        The FunctionName of the lambda function needs to be set to the correct value of "development-example-lambda" or "test-example-lambda" or "production-example-lambda"
         Add a tag to the lambda function with a key of "Stack" and a value set to the stack name.
         The lambda function needs to know which environment (development/test/production) it is running in. Pass in the value into an environment variable named RUNNING_ENVIRONMENT.
       Code:
@@ -79,14 +84,14 @@ Resources:
       Timeout: "5"
 
   ExampleKMSKey:
-    Type: AWS::KMS::Key
+    Type: "AWS::KMS::Key"
     Properties: 
-      Description: KMS key used by lambda to encrypt secrets created. complete access by the AWS account root user
-      Enabled: True
-      EnableKeyRotation: True
-      KeyPolicy: True
-      KeyUsage: ENCRYPT_DECRYPT
-      PendingWindowInDays: 7
+      Description: "KMS key used by lambda to encrypt secrets created. complete access by the AWS account root user"
+      Enabled: "True"
+      EnableKeyRotation: "False"
+      KeyPolicy: "False"
+      KeyUsage: "ENCRYPT_DECRYPT"
+      PendingWindowInDays: "7"
       Tags: 
         - 
           Key: "Environment"
@@ -96,27 +101,27 @@ Resources:
           Value: "ExampleKMSKey"
 
   ExampleManagedPolicy:
-    Type: AWS::IAM::ManagedPolicy
+    Type: "AWS::IAM::ManagedPolicy"
     Properties:
-      Description: allowing access to encrypt with the KMS key
-      ManagedPolicyName: ExampleManagedPolicy
+      Description: "allowing access to encrypt with the KMS key"
+      ManagedPolicyName: "ExampleManagedPolicy"
       PolicyDocument:
-        Version": 2012-10-17
+        Version: "2012-10-17"
         Statement:
             - Effect: "Allow"
-              Action: 'kms:Encrypt'
+              Action: "kms:Encrypt"
               Resource: !Ref ExampleKMSKey
               Condition:
                 StringEquals: !Join                
-                  - ''
-                  - - 'arn:aws:iam:'
-                    - ':'
-                    - !Ref 'AWS::AccountId'
-                    - ':root'
+                  - ""
+                  - - "arn:aws:iam:"
+                    - ":"
+                    - !Ref "AWS::AccountId"
+                    - ":root"
 
 Outputs:
   ManagedPolicyARN:
     Description: Outputs the arn of the managed policy
     Value: !Ref ExampleManagedPolicy
     Export: 
-      Name: !Sub "${AWS::StackName}-VPCID"
+      Name: !Sub "${AWS::StackName}-ManagedPolicy"
